api.yaml
apiVersion: v1
kind: Service
metadata:
  name: redsapi
  labels:
    app: redsapi
    service: redsapi
spec:
  ports:
    - port: 5101
      name: http
  selector:
    app: redsapi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redsapi-v1
  labels:
    app: redsapi
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redsapi
      version: v1
  template:
    metadata:
      labels:
        app: redsapi
        version: v1
    spec:
      serviceAccountName: redsapi
      containers:
        - name: redsapi
          image: reds/api:latest
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: FallbackToLogsOnError
          ports:
            - containerPort: 80
