sql.yaml
apiVersion: v1
kind: Service
metadata:
  name: sql
  labels:
    app: sql
    service: sql
spec:
  ports:
  - name: http
    protocol: TCP
    port: 1433
    targetPort: 1433
  selector:
    app: sql
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql
  labels:
    app: sql
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sql
      version: v1
  template:
    metadata:
      labels:
        app: sql
        version: v1
    spec:
      terminationGracePeriodSeconds: 10
      serviceAccountName: sql
      containers:
      - name: sql
        image: mcr.microsoft.com/mssql/server:2017-latest
        imagePullPolicy: IfNotPresent
        terminationMessagePolicy: FallbackToLogsOnError
        ports:
          - containerPort: 1433
