gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: reds-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reds
spec:
  hosts:
    - "*"
  gateways:
    - reds-gateway
  http:
    - match:
        - uri:
            exact: /rabbitmq
      route:
        - destination:
            host: rabbitmq
            port:
              number: 15672
